--- a/downloader/files/docker-downloader.env.j2
+++ b/downloader/files/docker-downloader.env.j2
@@ -6,5 +6,6 @@ PGID={{ pgid }}
 PUID={{ puid }}
 SONARR_TAG={{ sonarr_tag }}
 RADARR_TAG={{ radarr_tag }}
+LIDARR_TAG={{ lidarr_tag }}
 NZBGET_TAG={{ nzbget_tag }}
 TRANSMISSION_TAG={{ transmission_tag }}
