--- a/edms/templates/tarsnapper.yml.j2
+++ b/edms/templates/tarsnapper.yml.j2
@@ -10,7 +10,8 @@ jobs:
     sources:
       - /tmp/mayan.sql
       - {{ venv }}/mayan/media/document_storage
-      - {{ venv }}/mayan/media/document_cache
+      # Backing up the cache is optional, and it gets huge.
+      # - {{ venv }}/mayan/media/document_cache
       - {{ venv }}/mayan/settings
     exec_before: sudo -u postgres pg_dump mayan > /tmp/mayan.sql
     exec_after: rm /tmp/mayan.sql
