--- a/borgbackup/templates/config.yaml.j2
+++ b/borgbackup/templates/config.yaml.j2
@@ -27,3 +27,10 @@ consistency:
     - repository
     - archives
   check_last: 3
+{% if borgmatic_hooks is defined and borgmatic_hooks|length > 0 %}
+
+hooks:
+{% for hook in borgmatic_hooks %}
+  {{ hook | to_nice_yaml }}
+{%- endfor -%}
+{% endif %}
