Restrict to internal

--- a/bind9-conf/templates/named.conf.j2
+++ b/bind9-conf/templates/named.conf.j2
@@ -14,8 +14,8 @@ options {
     {{ forwarder }};
 {% endfor %}
   };
-  allow-query { any; };
-  allow-recursion { any; };
+  allow-query { internal; };
+  allow-recursion { internal; };
 };
 
 {% for zone in bind9_zones %}
